fixed heading title, navbad logo size on mobile phones

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -3984,6 +3984,15 @@ input[type="button"].btn-block {
   line-height: inherit;
   white-space: nowrap;
 }
+.navbar-brand img{
+  width:206px !important; 
+  margin: auto auto auto 0 !important;
+}
+@media (max-width: 600px){
+  .navbar-brand img{
+    width:150px !important;
+  }
+}
 
 .navbar-brand:hover, .navbar-brand:focus {
   text-decoration: none;
@@ -9749,8 +9758,13 @@ a.text-dark:hover, a.text-dark:focus {
 
 .masthead .masthead-heading {
   font-size: 2.75rem;
-  line-height: 2.75rem;
+  line-height: 1.10 !important;
 }
+ @media (max-width:991px){  
+  .masthead .masthead-heading {
+    font-size:35px !important;
+  }
+ }
 
 .masthead .masthead-subheading {
   font-size: 1.25rem;
@@ -9900,6 +9914,8 @@ form .row:first-child .floating-label-form-group {
 
 .iframe-contacto-formulario{
   width: 100%;
+  min-height: 100%;
   height: 120vh;
+  max-height: auto !important;
   margin:auto !important;
 }
